# qcmc_logic

./: .gitignore  README.md  pyproject.toml
qcmc_logic/: MRFStaffingPlan.py  __init__.py  hooks.py  modules.txt  qcmc_logics.py  utils.py
qcmc_logic/api/: __init__.py  auth.py  chatbot.py  contact_us.py  convertpr.py  courses.py  customers.py  generate_code.py  jasper.py  job_openings.py  locations.py  login_scan.py  public_announcements.py  public_people.py  public_testimonials.py  send_inquiry.py  website_event.py
qcmc_logic/customs/: MRFApprovers.py  MRFDept.py  MRF_SP_Filtering.py  permissions.py  staffing_plan_utils.py  staffingplan_permission.py  warehouse_transfer_events.py
qcmc_logic/fixtures/: account.json  client_script.json  custom_docperm.json  custom_field.json  doctype.json  email_template.json  letter_head.json  list_view_settings.json  module_def.json  module_profile.json  notification.json  print_format.json  property_setter.json  report.json  role.json  role_profile.json  server_script.json  translation.json  user.json  user_permission.json  warehouse_transfer.json  workflow.json  workflow_action_master.json  workflow_state.json
qcmc_logic/overrides/: MRFApprovers.py  POPrint_Override.py  StaffingPlanOverrides.py  appraisal_override.py  appraisalcycle_override.py  asset_override.py  jobopening_overrides.py  lms_overrides.py  oauth_override.py  payment_entry.py  query_report_override.py  wrr_override.py
qcmc_logic/patches/: custom_asset_patch.py  monkey_patches.py  oauth_patch.py
qcmc_logic/queries/: MrfEmp.py  bookletitems.py  item.py
(+15 files in other folders)
